--- a/Bioskop/src/main/webapp/index.html
+++ b/Bioskop/src/main/webapp/index.html
@@ -48,6 +48,7 @@
                   <button  id="admin-button" type="button" class="btn btn-success admin">Administracija</button>
                   <button  id="registration-btn" type="button" class="btn btn-success">Registration</button>
                   <button  id="logout-btn" type="button" class="btn btnc-success">Log Out</button>
+                  <button  id="adminCinema-button" type="button" class="btn btn-success admin">Institution's Admin</button>
                   
                </form>
             </div>
