ispravka u login controleru

--- a/Bioskop/src/main/webapp/index.html
+++ b/Bioskop/src/main/webapp/index.html
@@ -116,7 +116,7 @@
 			
 		</script>
 		
-	<script src="login.js"></script>
+	<script src="Login.js"></script>
 	
 	<script type="text/javascript">
 		$("#registration-btn").click(function(){
