--- a/Bioskop/src/main/webapp/AdminPanel.html
+++ b/Bioskop/src/main/webapp/AdminPanel.html
@@ -1,7 +1,7 @@
 				<div class="container">
 				 <h2>Modal Example</h2>
 				  <!-- Trigger the modal with a button -->
-				  <button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#modal"  data-backdrop="static" data-keyboard="false">Addd admin</button>
+				  <button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#modal"  >Addd admin</button>
 				  <button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#newCinema">Add cinema/theater</button>
 				  <!-- Modal -->
 				  <div class="modal fade" id="modal" role="dialog">
