Dodavanje tematskih rekvizita i testovi

--- a/Bioskop/src/main/webapp/changePassModal.html
+++ b/Bioskop/src/main/webapp/changePassModal.html
@@ -44,7 +44,7 @@
 						    dataType: 'json',
 						    success: function(){
 						    	alert("Uspesno promenjena lozinka!");
-						    	$("#passwordModal").hide();
+						    	$('#passwordModal').modal('hide');
 						    },
 						    error: function(){
 						    	alert("Greska asdasdasdsaprilikom unosa nove sifre");
