Update profile Form
not done

--- a/Bioskop/src/main/webapp/index.html
+++ b/Bioskop/src/main/webapp/index.html
@@ -116,6 +116,16 @@
 			
 		</script>
 
+	<script>
+	
+		$("#logout-btn").click(function() {
+			$.get("index.html");
+			
+		});
+	
+	
+	</script>
+
 		<script>
 			
 			$("#adminCinema-button").click(function(){
