Dodavanje novih sala i projekcija

--- a/Bioskop/src/main/webapp/cinemas.html
+++ b/Bioskop/src/main/webapp/cinemas.html
@@ -14,20 +14,20 @@
 			
 			var html = '<hr>';
 			$.each(cinemas, function(i, cinema){
-				if(cinemas.length == 0){
-					html+='<p>There is no cinema at this moment.</p>';
+				if(cinemas == null){
+					html+='<br><br><br><br><br><br><br><br><br><p>There is no cinema at this moment.</p>';
 				}
 				else{
-				//if(cinema.isCinema === true){
-					html+= '<div border="2" class="row" style="background-color:white" align:"center">'+
-		       		'<div class="col-md-4">'+
-		         	'<h2 font-family:serif>'+cinema.name+'</h2>'+
-		         	'<p>'+cinema.adress.street +' '+ cinema.adress.city+'</p>'+
-		         	'<p>'+cinema.description+'</p>'+
-		         	'<p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>'+
-		       		'</div>'+
-		    		'</div><hr>';
-				//}
+					//if(cinema.isCinema == true){
+						html+= '<div border="2" class="row" style="background-color:white" align:"center">'+
+			       		'<div class="col-md-4">'+
+			         	'<h2 font-family:serif>'+cinema.name+'</h2>'+
+			         	'<p>'+cinema.adress.street +' '+ cinema.adress.city+'</p>'+
+			         	'<p>'+cinema.description+'</p>'+
+			         	'<p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>'+
+			       		'</div>'+
+			    		'</div><hr>';
+				//	}
 				}
 			});
 			$('#cinemas').append(html);
