--- a/Bioskop/src/main/webapp/index.html
+++ b/Bioskop/src/main/webapp/index.html
@@ -34,7 +34,7 @@
                <span class="icon-bar"></span>
                <span class="icon-bar"></span>
                </button>
-               <a class="navbar-brand" href="/EmergencySituations/">Cinema</a>
+               <a class="navbar-brand" href="index.html">Cinema</a>
             </div>
             <div id="navbar" class="navbar-collapse collapse">
                <form id="login-form" class="navbar-form navbar-right">
