ReservationController - za sad samo prvi i drugi korak rezervacije

--- a/Bioskop/src/main/webapp/index.html
+++ b/Bioskop/src/main/webapp/index.html
@@ -127,6 +127,7 @@
 					$("#admin-button").show();
 					$("#login-btn").show();
 					$("#registration-btn").show();
+					$("#adminCinema-button").show();
 					$("#logout-btn").hide();
 					$("#body").empty(); 
 					$("#body").append("<h1><br/><br/>Uspesno ste se izlogovali!!</h1>");
