rezervacija tematskog rekvizita

--- a/Bioskop/src/main/webapp/index.html
+++ b/Bioskop/src/main/webapp/index.html
@@ -164,7 +164,7 @@
 					});
 			});
 		</script>
-	<script src="login.js"></script>
+	<script src="Login.js"></script>
 
 	
 	<script type="text/javascript">
