--- a/Bioskop/src/main/webapp/index.html
+++ b/Bioskop/src/main/webapp/index.html
@@ -65,7 +65,7 @@
       		<div class="col-md-4 col-md-offset-2">
       			<div class="panel panel-primary"   >
       				<div class="panel-heading">
-      					<h3 class="panel-title">Cinemaaaa</h3>
+      					<h3 class="panel-title">Cinema</h3>
       				</div>
       				<div id="cinema" class="panel-body" style="margin-left:0px;padding-top: 0px;padding-right: 0px;padding-bottom: 0px;padding-left: 0px">
       					
