--- a/Bioskop/src/main/webapp/profilePanel.html
+++ b/Bioskop/src/main/webapp/profilePanel.html
@@ -115,7 +115,7 @@
         <div class="col-xs-12 col-sm-12 col-md-12 ">
         	<div class="panel panel-default">
         		<div class="panel-heading">
-			    		<h3 class="panel-title">Please enter information about new admin </h3>
+			    		<h3 class="panel-title">Please enter information about new cinema/theater </h3>
 			 			</div>
 			 			<div class="panel-body">
 			    		<form role="form" data-toggle="validator" id="formCinema">
