Front za brze rezervacije i menjanje modela

--- a/Bioskop/src/main/webapp/index.html
+++ b/Bioskop/src/main/webapp/index.html
@@ -19,7 +19,6 @@
       <link href="css/jumbotron.css" rel="stylesheet">
       <!-- Just for debugging purposes. Don't actually copy these 2 lines! -->
       <!--[if lt IE 9]><script src="../../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
-	  
 		
    </head>
 
@@ -64,6 +63,9 @@
             <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more &raquo;</a></p>
          </div>
       </div>
+      
+      <a href="fastRezTickets.html" class="btn btn-default">FAST TICKET</a>
+      
       	<div class="row">
       		<div class="col-md-4 col-md-offset-2">
       			<div class="panel panel-primary"   >
