--- a/Bioskop/src/main/webapp/adminTable.html
+++ b/Bioskop/src/main/webapp/adminTable.html
@@ -1,26 +1,34 @@
 <div style="background-color:white;border-radius:6px;padding:15px;">
 <div class="row">
-	<button type="button" class="btn btn-info btn-lg col-md-2 col-md-offset-5" data-toggle="modal" data-target="#modal"  >New admin</button>
+	<button type="button" class="btn btn-info btn-lg col-md-2 col-md-offset-5" data-toggle="modal" data-target="#modal" >New admin</button>
 </div>
 <div style="padding:15px;">
 <div class="row">
-<table class="table" id="adminTable" style="background-color:white;">
-  <caption>List of Admins</caption>
-  <thead>
-    <tr>
-      <th scope="col">#</th>
-      <th scope="col">Firstname</th>
-      <th scope="col">Lastname</th>
-      <th scope="col">Username</th>
-      <th scope="col">Email</th>
-      <th scope="col">User Type</th>
-    </tr>
-  </thead>
-  <tbody id="tableBody">
+<table id="adminTable" class="table table-striped table-bordered">
+		     <thead>
+		         <tr>
+		             <th>Firstname</th>
+		             <th>Lastname</th>
+		             <th>Username</th>
+		             <th>Email</th>
+		             <th>User type</th>
 
-  </tbody>
-  
-</table>
+		             
+		         </tr>
+		     </thead>
+		     <tbody id="tableBody">
+		        
+		     </tbody>
+		     <tfoot>
+		         <tr>
+		             <th>Firstname</th>
+		             <th>Lastname</th>
+		             <th>Username</th>
+		             <th>Email</th>
+		             <th>User type</th>
+		         </tr>
+		     </tfoot>
+		 </table>
 </div>
 </div>
 </div>
