--- a/Bioskop/src/main/webapp/AdminTable.html
+++ b/Bioskop/src/main/webapp/AdminTable.html
@@ -12,6 +12,7 @@
 		             <th>Username</th>
 		             <th>Email</th>
 		             <th>User type</th>
+		             <th>Delete</th>
 
 		             
 		         </tr>
@@ -26,6 +27,7 @@
 		             <th>Username</th>
 		             <th>Email</th>
 		             <th>User type</th>
+		             <th>Delete</th>
 		         </tr>
 		     </tfoot>
 		 </table>
