--- a/Bioskop/src/main/webapp/index.html
+++ b/Bioskop/src/main/webapp/index.html
@@ -56,11 +56,11 @@
       </nav>
       <div id="body" class="container-body" style="margin-top: 100px">
       
-      <div class="jumbotron">
+      <div class="jumbotron" style="margin-top:-50px;">
          <div class="container">
-            <h1>Hello, world!</h1>
-            <p>This is a template for a simple marketing or informational website. It includes a large callout called a jumbotron and three supporting pieces of content. Use it as a starting point to create something more unique.</p>
-            <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more &raquo;</a></p>
+            <h1 align="center">Welcome</h1>
+            <h1 align="center">Welcome</h1>
+            <h1 align="center">Welcome</h1>
          </div>
       </div>
       
